--- a/chat/templates/chatroom.html
+++ b/chat/templates/chatroom.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<meta charset="uft-8">	
+	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+	<title>Hello world!</title>
 </head>
 <body>
-	<div>{{ room_name }}</div>
+	<div class="content " >
+		<textarea id="chat-text" cols="80" rows="30"></textarea></br>
+		<input id="input" type="text" size="80"></br>
+		<input id="submit" type="button" value="Send">
+	</div>
+	
+
+	{{ room_name|json_script:"room-name" }}
+	{{ request.user.username|json_script:"user-username" }}
+
+	<script type="text/javascript">
+	var local_host 	= window.location.host;
+	var red_host 	= '192.168.0.103:8080';
+	const roomName 		=JSON.parse(document.getElementById('room-name').textContent);
+	const user_username =JSON.parse(document.getElementById('user-username').textContent);
+
+	document.querySelector('#submit').onclick = function (e) {
+		const messageInputDom 	= document.querySelector('#input');
+		const message 			= messageInputDom.value;
+
+		chatSocket.send(JSON.stringify({
+			'message':message,
+			'username':user_username
+		}));
+		messageInputDom.value = '';
+	}
+
+	const chatSocket 	= new WebSocket(
+
+		'ws://'+ local_host + '/ws/chat/'+ roomName + '/');
+	
+	chatSocket.onmessage= function (e){
+		const data 		= JSON.parse(e.data);
+		console.log(data);
+		//document.querySelector('#user-hello').innerHTML =  (data.tester);
+		document.querySelector('#chat-text').value 		+= (data.user_username +'\n'+data.message + '\n');
+	}
+
+	</script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
