--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -26,12 +26,11 @@
 			<label>Author:</label><br>
 			<input type="text" name="author"/><br>
 
-			<button type="submit">puerco</button>
+			<button type="submit">Crear chat</button>
 			
 		</form>
 	</div>
 	<a href="{% url 'chatapp:index' %}">Index</a>
-	<a href="{% url 'chatapp:algo' %}">Algo</a>
 	
 </body>
 </html>
