--- a/chat/templates/register.html
+++ b/chat/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login</title>
+	<title>Register</title>
 	<link rel="stylesheet" 
             href="https://bootswatch.com/4/yeti/bootstrap.css">
 </head>
@@ -15,12 +15,12 @@
     			<div class="collapse navbar-collapse" id="navbarColor02">
       				<ul class="navbar-nav me-auto">
         				<li class="nav-item">
-          					<a class="nav-link active" href="{$ url 'chatapp:login' $}">Login
+          					<a class="nav-link active" href="{$ url 'chatapp:register' $}">Register
             				<span class="visually-hidden">(current)</span>
           					</a>
         				</li>
         				<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:register' %}">Register</a>
+          					<a class="nav-link" href="{% url 'chatapp:login' %}">Login</a>
         				</li>
         				<li class="nav-item">
          					<a class="nav-link" href="{% url 'chatapp:logout' %}">Logout</a>
@@ -51,13 +51,15 @@
 	
 
 	<div class="container p-5 text-center">
-		<h3>Login!</h3>
-		<form action="{% url 'saver:login' %}" method="post">
+		<h3>Start your registration</h3>
+		<form action="{% url 'saver:register' %}" method="post">
 			{% csrf_token %}
 			<br>
 			<label>Title:</label><br>
-			<input type="text" name="chatname"/><br>
-			<input type="text" name="password"><br>
+			   <input type="text" name="chatname"/><br>
+        <input type="text" name="email"/><br>
+			   <input type="text" name="password1"><br>
+        <input type="text" name="password2"><br>
 			
 			<button class="btn" type="submit">Login</button>
 			
